<resources>
    <string name="app_name">ProficoTask</string>
    <string name="select_genres">Select genres</string>
    <string name="popular_game">Popular game:</string>
    <string name="text_continue">Continue</string>
    <string name="no_genres_selected">No genres selected</string>
    <string name="one_genre_selected">1 genre selected</string>
    <string name="genre_count_template">%d genres selected</string>
    <string name="games">Games</string>
    <string name="web_client_id">640437404873-f86ohgol431a05e2e42ibvmj9giaroq6.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="try_without_an_account">Try without an account</string>
    <string name="about">About</string>
    <string name="platforms">Platforms</string>
    <string name="metacritic">Metacritic</string>
    <string name="rating">Rating</string>
    <string name="game_screenshots">Game screenshots</string>
    <string name="genres">Genres</string>
    <string name="settings">Settings</string>
    <string name="save_changes">Save changes</string>
    <string name="favorite_genres">Favorite genres</string>
    <string name="manage_genres">Manage genres</string>
    <string name="manage">Manage</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="release_date">Release date</string>
</resources>