<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#151515"
        tools:context=".GameActivity">

        <ImageView
            android:id="@+id/ivGameImage"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ivGameImage"
            tools:text="Dead Space" />

        <TextView
            android:id="@+id/tvMetacriticLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/metacritic"
            android:textColor="#414444"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGameTitle" />

        <TextView
            android:id="@+id/tvMetacritic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:theme="@style/HeadlineLargeNLv1Left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMetacriticLabel"
            tools:text="91" />

        <TextView
            android:id="@+id/tvRatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="16dp"
            android:text="@string/rating"
            android:textColor="#414444"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGameTitle" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="8dp"
            android:theme="@style/HeadlineLargeNLv1Left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRatingLabel"
            tools:text="4.41"
            tools:textColor="@color/white" />


        <TextView
            android:id="@+id/tvAboutLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/about"
            android:textColor="@color/white"
            android:theme="@style/HeadlineLargeNLv1Left"
            app:layout_constraintTop_toBottomOf="@id/tvMetacritic" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvAboutLabel"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/tvPlatformsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/platforms"
            android:textColor="#414444"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAbout" />

        <TextView
            android:id="@+id/tvPlatforms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvPlatformsLabel"
            tools:text="PC, Xbox Series S/X, PlayStation 5" />

        <TextView
            android:id="@+id/tvGenresLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/genres"
            android:textColor="#414444"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPlatforms" />

        <TextView
            android:id="@+id/tvGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvGenresLabel"
            tools:text="PC, Xbox Series S/X, PlayStation 5" />

        <TextView
            android:id="@+id/tvScreenshotsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/game_screenshots"
            android:textColor="@color/white"
            android:theme="@style/HeadlineLargeNLv1Left"
            app:layout_constraintTop_toBottomOf="@id/tvGenres" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvScreenshotsLabel">

            <ProgressBar
                android:id="@+id/imagesProgressBar"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/imageIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/cardContainer"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:elevation="2dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>